implemented product details dialog, changed searchTermFilter
