# backend/src/main/java/at/ltb/apprenticedeliverysystem/core/category/api/AdminModCategoryManagementResource.java
@@ -24,6 +24,10 @@ public interface AdminModCategoryManagementResource {
                                                            @RequestParam(value = "pageSize", required = false) Integer pageSize,
                                                            @RequestParam(value = "searchTerm", required = false) Optional<String> searchTerm);
 
+    @Operation(description = "load all categories with filter")
+    @GetMapping(value = "/all", produces = "application/json")
+    ResponseWrapper<CategoryOverviewDTO> loadAllCategoriesWithoutPagination(@RequestParam(value = "searchTerm", required = false) Optional<String> searchTerm);
+
     @Operation(description = "load category by id")
     @GetMapping(value = "/{id}", produces = "application/json")
     CategoryDetailDTO loadCategoryById(@PathVariable("id") String id);
